# xamppL

./: CMakeLists.txt  README.md  build.sh  install.sh  myxamppctl
.github/workflows/: main.yml
conf/apache/: httpd.conf
conf/apache/extra/: httpd-vhosts.conf
conf/ftp/: vsftpd.conf
conf/mariadb/: my.cnf
conf/php/: php.ini
scripts/: check_deps.sh  init_db.sh  setup_dirs.sh
src/: configeditor.cpp  configeditor.h  ftpserver.cpp  ftpserver.h  logviewer.cpp  logviewer.h  main.cpp  mainwindow.cpp  mainwindow.h  portchecker.cpp  portchecker.h  servicemanager.cpp  servicemanager.h
